applications/software/home1/ytdlp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yt-dlp-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yt-dlp-webui
  template:
    metadata:
      labels:
        app: yt-dlp-webui
    spec:
      tolerations:
      - key: "PrivateNode"
        operator: "Equal"
        value: "home1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: location
                operator: In
                values:
                - home1
      containers:
      - name: yt-dlp-webui
        image: ghcr.io/marcopiovanello/yt-dlp-web-ui@sha256:c16451076c02ced3a17b4bfc005fbb6566676fb1ca25c4dcb334e5b82bdd9b27
        ports:
        - containerPort: 3033
