applications/software/home1/ytdlp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yt-dlp-webui
spec:
  selector:
    app: yt-dlp-webui
  ports:
  - port: 80
    targetPort: 5000
