applications/software/home1/ytdlp/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yt-dlp-webui
spec:
  parentRefs:
  - name: kgateway
    namespace: kgateway
    sectionName: https
  hostnames:
  - "dl.yewolf.fr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ak-outpost-proxy
      namespace: authentik
      port: 9000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /outpost.goauthentik.io
  - backendRefs:
    - group: ""
      kind: Service
      name: yt-dlp-webui
      port: 80
      weight: 1
    timeouts:
      request: 0s
      backendRequest: 0s
    matches:
    - path:
        type: PathPrefix
        value: /
